Insert transaction done